axum-macros/tests/from_request/fail/generic_without_via.stderr
error: #[derive(FromRequest)] only supports generics when used with #[from_request(via)]
 --> tests/from_request/fail/generic_without_via.rs:5:18
  |
5 | struct Extractor<T>(T);
  |                  ^

error[E0277]: the trait bound `fn(Extractor<()>) -> impl Future<Output = ()> {foo}: Handler<_, _, _>` is not satisfied
   --> tests/from_request/fail/generic_without_via.rs:10:46
    |
10  |     Router::<(), Body>::new().route("/", get(foo));
    |                                          --- ^^^ the trait `Handler<_, _, _>` is not implemented for fn item `fn(Extractor<()>) -> impl Future<Output = ()> {foo}`
    |                                          |
    |                                          required by a bound introduced by this call
    |
    = help: the trait `Handler<T, S, B>` is implemented for `Layered<L, H, T, S, B>`
note: required by a bound in `axum::routing::get`
   --> $WORKSPACE/axum/src/routing/method_routing.rs
    |
    | top_level_handler_fn!(get, GET);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `axum::routing::get`
    = note: this error originates in the macro `top_level_handler_fn` (in Nightly builds, run with -Z macro-backtrace for more info)
